format.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.back {
  background: #181a1b;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #242424;
  z-index: 1000; /*priority over others*/
}

li {
  list-style: none;
}

.nav-menu a {
  color: white;
  text-decoration: none;
  margin-top: 8px;
}

.navbar {
  min-height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
}

.nav-menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 60px;
}

.nav-branding {
  font-size: 2rem;
  color: white;
  text-decoration: none;
}

.nav-link {
  transition: 0.7s ease;
  color: white;
}

.nav-link:hover {
  color: dodgerblue;
}

.hamburger {
  display: none;
  cursor: pointer;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: white;
}

@media (max-width: 768px) {
  .hamburger {
    display: block;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }
  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }
  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .nav-menu {
    position: fixed;
    left: -100%;
    top: 70px;
    gap: 0;
    flex-direction: column;
    background-color: #242424;
    width: 100%;
    text-align: center;
    transition: 0.3s;
    z-index: 100;
  }

  .nav-item {
    margin: 16px 0;
  }

  .nav-menu.active {
    left: 0;
  }
}

/* about */
.intro {
  justify-content: center;
  color: white;
}

.about-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 40px;
}

.socials {
  display: flex;
  background: white;
  height: 70px;
  width: 70px;
  margin: 10px 20px;
  padding: 10px;
  border: 5px solid;
  border-color: #121212;
  border-radius: 10px;
}

.s_icon {
  height: 40px;
  width: 40px;
}

.socials-container {
  display: flex;
}

.pfp {
  height: 450px;
  width: 325px;
  border-radius: 15px;
  margin-right: 15px;
  border: 5px solid;
  border-color: #121212;
  margin-bottom: 10px;
  justify-content: left;
  overflow: hidden;
}

.bio {
  display: flex;
  text-align: left;
  padding: 15px;
  background-color: white;
  border: 5px solid;
  border-color: #121212;
  border-radius: 15px;
  width: 660px;
  margin-right: 10px;
}

/* Resume */
.res-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding-top: 50px;
}
.work {
  margin-right: 50px;
  margin-bottom: 20px;
}

.work-des-container {
  font-size: 15px;
  background-color: white;
  border-radius: 10px;
  margin-top: 10px;
}
.work-des {
  font-size: 15px;
  margin-left: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 24px;
}

.courses {
  font-size: 15px;
  margin-right: 50px;
  margin-bottom: 20px;
}

.skills {
  font-size: 15px;
  margin-right: 50px;
  margin-bottom: 20px;
}

.education {
  margin-right: 50px;
  margin-bottom: 20px;
}
.edu-des {
  font-size: 15px;
  margin-left: 25px;
  margin-top: 10px;
  margin-bottom: 17px;
  margin-right: 71px;
}
.edu-des-container {
  font-size: 15px;
  background-color: white;
  border-radius: 10px;
  margin-top: 10px;
  padding-bottom: 17px;
}

/* projects*/

.project-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 100px;
}

.card {
  background: var(--white);
  width: 270px;
  height: 475px;
  margin: 10px;
  border-radius: 25px;
  z-index: 1;
  position: relative;
}

.card-img1 {
  height: 175px;
  width: 275px;
  object-fit: contain;
  margin-top: 15px;
}
.card-text1 {
  font-size: 12pt;
  margin: 5px 20px 0px;
}
.card-link1 {
  margin-left: 70px;
}

/* contact */
.message-in {
  width: 200px;
}

.title {
  text-transform: uppercase;
  margin-bottom: 35px;
  margin-top: 15px;
}

.form-body {
  text-align: center;
}

.reg-form {
  display: inline-block;
  border-style: solid;
  border-radius: 25px;
  border-width: thin;
  border-color: lightgrey;
  background-color: white;
  padding: 10px;
  margin-top: 100px;
}

.fill {
  margin-bottom: 30px;
}

.space {
  margin-bottom: 15px;
}

.text-box {
  display: inline-block;
  width: 100px;
  text-align: left;
  font-weight: bold;
  font-size: 18px;
}

.type-i {
  display: inline-block;
  width: 67%;
}

.feedback {
  font-weight: bold;
  text-align: left;
  font-size: 18px;
  padding: 0;
}

.r-btn {
  display: block;
  text-align: left;
  margin-left: 26px;
}

.prim-btn {
  background-color: var(--green);
  font-family: sans-serif;
  color: white;
  font-size: 12pt;
  border-radius: 2px;
  width: 185px;
  height: 40px;
  border-color: green;
  border-style: solid;
  border-width: thin;
}

.sec-btn {
  background-color: white;
  font-family: sans-serif;
  color: green;
  font-size: 12pt;
  border-radius: 2px;
  width: 185px;
  height: 40px;
  border-color: green;
  border-style: solid;
  border-width: thin;
}

.prim-btn:hover {
  background-color: orange;
  border-color: black;
  color: black;
}

.sec-btn:hover {
  background-color: lightgreen;
  border-color: black;
  color: green;
}
.bottom {
  margin-bottom: 2em;
}

fieldset {
  border: 0;
}

